--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -23,10 +23,10 @@ jobs:
       - name: Build and Push Image
         uses: docker/build-push-action@v5
         with:
-          context: .
+          # Correcting the directory context
+          context: ./pharma_app
+          file: ./pharma_app/Dockerfile
           push: true
-          # Note: Build args are not needed for Next.js internal vars because 
-          # your Dockerfile handles dummy values for the build-scan.
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/pharma-webapp:latest
 
   deploy:
@@ -40,31 +40,18 @@ jobs:
           username: ec2-user
           key: ${{ secrets.BASTION_PRIVATE_KEY }}
           script: |
-            # 1. SSH from Bastion to the Private App Server
             ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.APP_SERVER_PRIVATE_IP }} << 'EOF'
-              # 2. Authenticate
               docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
-              
-              # 3. Pull the latest image
               docker pull ${{ secrets.DOCKERHUB_USERNAME }}/pharma-webapp:latest
-              
-              # 4. Stop and remove the old container
               docker stop pharma-app || true
               docker rm pharma-app || true
               
-              # 5. Run the container with all REAL Runtime Secrets
               docker run -d \
                 --name pharma-app \
                 --restart always \
                 -p 3000:3000 \
                 -e DATABASE_URL="${{ secrets.DATABASE_URL }}" \
-                -e DIRECT_URL="${{ secrets.DIRECT_URL }}" \
                 -e CLERK_SECRET_KEY="${{ secrets.CLERK_SECRET_KEY }}" \
                 -e NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}" \
-                -e PAYSTACK_SECRET_KEY="${{ secrets.PAYSTACK_SECRET_KEY }}" \
-                -e NEXT_PUBLIC_PAYSTACK_PUBLIC_KEY="${{ secrets.NEXT_PUBLIC_PAYSTACK_PUBLIC_KEY }}" \
-                -e GROQ_API_KEY="${{ secrets.GROQ_API_KEY }}" \
-                -e PYTHON_API_URL="${{ secrets.PYTHON_API_URL }}" \
-                -e NEXT_PUBLIC_API_URL="${{ secrets.NEXT_PUBLIC_API_URL }}" \
                 ${{ secrets.DOCKERHUB_USERNAME }}/pharma-webapp:latest
             EOF
